# backend_rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  run_backend.ps1  update_backend.py
migrations/: 20260701000000_create_users.sql  20260701000001_create_todos_table.sql  20260701000002_create_habits_table.sql  20260701000003_create_transactions_table.sql  20260701000004_create_notes_table.sql  20260701000005_create_focus_sessions_table.sql  20260701000006_create_chat_tables.sql  20260701000007_add_friend_code_and_avatar.sql  20260701092352_add_avatars_table.sql  20260702000000_create_file_uploads_table.sql  20260702000001_add_user_id_to_tables.sql  20260702000003_add_habit_logs.sql  20260702000004_update_todos_notes.sql  20260703000000_create_gamification_tables.sql  20260703010000_create_social_activities_table.sql  20260703020000_create_weekly_tasks_table.sql  20260703030000_create_tier_borders_table.sql  20260703040000_create_shop_tables.sql  20260704000000_create_quests_table.sql  20260704010000_create_squads_tables.sql  20260704020000_create_badges_tables.sql  20260707100637_create_app_versions_table.sql  20260707102912_create_affinity_connections.sql  20260707123000_add_is_read_to_chat_messages.sql  20260707133000_seed_app_version_2_1.sql
src/: dashboard.html  main.rs
src/api/: affinity.rs  analytics.rs  auth.rs  avatars.rs  badges.rs  chat.rs  focus.rs  gamification.rs  habits.rs  mod.rs  notes.rs  quests.rs  shop.rs  social.rs  squads.rs  system.rs  todos.rs  transactions.rs  upload.rs  (+1 more)
(+23 files in other folders)
